# hello_rust

./: .dockerignore  Cargo.toml
docker/: Dockerfile
docker/local/: docker-compose.yml  hello_rust_schema.sql
src/: main.rs
src/application/: mod.rs
src/application/actions/: mod.rs  user.rs
src/application/guards/: mod.rs  userguard.rs
src/application/responders/: apierror.rs  formatter.rs  mod.rs  session.rs  user.rs
src/domain/model/: formatter.rs  mod.rs  session.rs  user.rs
src/domain/repository/: mod.rs  sessionrepository.rs
src/infrastructure/repository/: mod.rs  mysql_connection.rs  mysql_sessionrepository.rs
src/testing/unit/domain/: session.rs  user.rs
