[package]
name = "hello_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = "1.0.130"
bcrypt = "0.14.0"
readonly = "0"
rand = "0"

[dependencies.chrono]
chrono = "0.4"
features = ["serde"]

[dependencies.rocket]
version = "0.5.0-rc.3"
features = ["json"]