[package]
name = "hello_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = "1.0.130"
bcrypt = "0.14.0"
readonly = "0"
rand = "0"
mysql = "24.0.0"
dotenvy = "0.15"
email_address = "0.2.4"
passwords = "3.1.13"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.rocket]
version = "0.5.0-rc.3"
features = ["json"]

[dependencies.mysql_common]
version = "0.30"
features = ["chrono"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"